Refactored every controller to return either ResponseEntity or PagedResponse