@@ -6,6 +6,7 @@ import com.me.ecommerce.entity.Product;
 import com.me.ecommerce.mapper.ProductMapper;
 import com.me.ecommerce.repository.ProductRepository;
 import com.me.ecommerce.service.ProductService;
+import com.me.ecommerce.utils.AppConstants;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
@@ -16,12 +17,12 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 
 import static com.me.ecommerce.utils.AppConstants.CREATED_AT;
 
-// ProductServiceImpl.java
 @Service
 public class ProductServiceImpl implements ProductService {
 
@@ -48,24 +49,46 @@ public class ProductServiceImpl implements ProductService {
 //                    , productListPage.isLast()
             );
         }
-
         List<ProductDTO> productDTOS = products.getContent().stream()
                 .map(productMapper::productToProductDTO)
                 .toList();
-
         return new PagedResponse<>(productDTOS, products.getNumber(),
                 products.getSize(), products.getTotalElements(),
                 products.getTotalPages()
 //               , albums.isLast()
         );
+    }
 
-//        return new PageImpl<>(productListPage.getContent()
-//                .stream()
-//                .sorted(Comparator.comparing(Product::getId))
-//                .map(productMapper::productToProductDTO)
-//                .collect(Collectors.toList()),
-//                pageable,
-//                productListPage.getTotalElements());
+    @Override
+    public PagedResponse<ProductDTO> getProductsByCategory(Long id, Integer page ,Integer size) {
+        Pageable pageable = PageRequest.of(page, size, Sort.Direction.DESC);
+
+        Page<Product> productsByCategory = productRepository.findByCategoryId(id, pageable);
+
+        List<ProductDTO> productDTOS = productsByCategory.getContent().stream()
+                .map(productMapper::productToProductDTO)
+                .toList();
+        return new PagedResponse<>(productDTOS, productsByCategory.getNumber(),
+                productsByCategory.getSize(), productsByCategory.getTotalElements(),
+                productsByCategory.getTotalPages()
+//               , albums.isLast()
+        );
+    }
+
+    @Override
+    public PagedResponse<ProductDTO> searchProductByKeywordsPaginated(String keywords, Integer page ,Integer size) {
+        Pageable pageable = PageRequest.of(page, size, Sort.Direction.DESC);
+
+        Page<Product> productsByKeywords = productRepository.searchByKeywordsPaginated(keywords, pageable);
+
+        List<ProductDTO> productDTOS = productsByKeywords.getContent().stream()
+                .map(productMapper::productToProductDTO)
+                .toList();
+        return new PagedResponse<>(productDTOS, productsByKeywords.getNumber(),
+                productsByKeywords.getSize(), productsByKeywords.getTotalElements(),
+                productsByKeywords.getTotalPages()
+//               , albums.isLast()
+        );
     }
 
     @Override
@@ -101,65 +124,11 @@ public class ProductServiceImpl implements ProductService {
     }
 
     @Override
-    public Page<ProductDTO> getProductsByCategory(Long id, Pageable pageable) {
-        Page<Product> productsByCategory = productRepository.findByCategoryId(id, pageable);
-        return new PageImpl<>(
-                productsByCategory.getContent()
-                        .stream()
-                        .sorted(Comparator.comparing(Product::getId))
-                        .map(productMapper::productToProductDTO)
-                        .collect(Collectors.toList()),
-                pageable,
-                productsByCategory.getTotalElements());
-
-    }
-
-    @Override
-    public Page<ProductDTO> searchProductByKeywordsPaginated(String keywords, Pageable pageable) {
-        Page<Product> productsPage = productRepository.searchByKeywordsPaginated(keywords, pageable);
-        List<ProductDTO> productDTOs = productsPage.getContent()
-                .stream()
-                .map(productMapper::productToProductDTO)
-                .collect(Collectors.toList());
-        return new PageImpl<>(productDTOs, pageable, productsPage.getTotalElements());
-    }
-
-    @Override
     public List<ProductDTO> searchProductByKeywords(String keywords) {
         List<Product> products = productRepository.searchByKeywords(keywords);
         return products.stream()
                 .map(productMapper::productToProductDTO)
                 .collect(Collectors.toList());
     }
-
-//    public Page<ProductDTO> searchByKeywords(String keywords
-////            , Integer limit
-//            , Pageable pageable) {
-//
-//        List<Product> productList = productRepository.searchByKeywords(keywords);
-//
-//        // Get the total number of items
-//        int totalItems = productList.size();
-//// Apply pagination to the list manually
-//        int start = (int) pageable.getOffset();
-//        int end = Math.min((start + pageable.getPageSize()), totalItems);
-//        List<Product> paginatedProducts = productList.subList(start, end);
-//
-////        if (isPaginated && pageable.isPaged()) {
-////            // Apply pagination manually
-////            int start = (int) pageable.getOffset();
-////            int end = Math.min((start + pageable.getPageSize()), productList.size());
-////            productList = productList.subList(start, end);
-////        }
-//
-//        // Map to DTOs
-//        List<ProductDTO> productDTOs = paginatedProducts.stream()
-//                .sorted(Comparator.comparing(Product::getId))
-//                .map(productMapper::productToProductDTO)
-//                .collect(Collectors.toCollection(ArrayList::new));
-//
-//        // Return the page with the correct total number of elements
-//        return new PageImpl<>(productDTOs, pageable, totalItems);
-//    }
 }
 
